# Tecindo

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_users.sql  003_user_ownership.sql  004_document_versions.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: documents.rs  mod.rs  search.rs  sessions.rs  tags.rs  users.rs  versions.rs
backend/src/middleware/: auth.rs
backend/src/models/: document.rs  mod.rs  session.rs  tag.rs  user.rs  version.rs
backend/src/routes/: auth.rs  documents.rs  folders.rs  health.rs  mod.rs  search.rs  sessions.rs  tags.rs  versions.rs
backend/src/services/: markdown.rs  mod.rs
docs/: BACKEND_ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  search.ts  tags.ts
frontend/src/components/Auth/: LoginPage.tsx  ProtectedRoute.tsx  RegisterPage.tsx
frontend/src/components/Editor/: Editor.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/Search/: SearchBar.tsx  SearchResults.tsx
frontend/src/components/Sidebar/: Sidebar.tsx
frontend/src/components/Tags/: TagBadge.tsx  TagManager.tsx  TagSelector.tsx
frontend/src/components/VersionHistory/: VersionHistory.tsx
frontend/src/hooks/: useDocuments.ts
frontend/src/lib/: types.ts
frontend/src/stores/: authStore.ts  documentStore.ts  tagStore.ts  uiStore.ts
frontend/src/styles/: editor.css
specs/: api.md  architecture.md  database.md  deployment.md  frontend.md
